# geo-clipper

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  default.nix  devenv.nix  flake.nix  shell.nix
.github/: dependabot.yml
.github/workflows/: rust.yml
src/: lib.rs
