[package]
name = "geo-clipper"
version = "0.3.0"
authors = ["Gérald Lelong <gerald.lelong@easymov.fr>"]
edition = "2018"
license = "ISC"
readme = "README.md"
repository = "https://github.com/lelongg/geo-clipper"
documentation = "https://docs.rs/geo-clipper/"
description = "Boolean operations on polygons"
keywords = ["geo", "polygon", "boolean", "offset"]
categories = ["algorithms"]

[dependencies]
clipper-sys = { git = "git://github.com/jsadusk/clipper-sys" }
geo-types = "0.6.0"
