[package]
name = "geo-clipper"
version = "0.5.1-alpha.0"
authors = ["Gérald Lelong <gerald.lelong@easymov.fr>"]
edition = "2018"
license = "ISC"
readme = "README.md"
repository = "https://github.com/lelongg/geo-clipper"
documentation = "https://docs.rs/geo-clipper/"
description = "Boolean operations on polygons"
keywords = ["geo", "polygon", "boolean", "offset"]
categories = ["algorithms"]

[dependencies]
geo-types = "0.7.1"
clipper-sys = { git = "https://github.com/Nevsden/clipper-sys.git", branch = "wrapper_path_conversion_optimization" }
